<?xml version="1.0" encoding="UTF-8"?>
<!--

    CODENVY CONFIDENTIAL
    __________________

     [2012] - [2013] Codenvy, S.A.
     All Rights Reserved.

    NOTICE:  All information contained herein is, and remains
    the property of Codenvy S.A. and its suppliers,
    if any.  The intellectual and technical concepts contained
    herein are proprietary to Codenvy S.A.
    and its suppliers and may be covered by U.S. and Foreign Patents,
    patents in process, and are protected by trade secret or copyright law.
    Dissemination of this information or reproduction of this material
    is strictly forbidden unless prior written permission is obtained
    from Codenvy S.A..

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.codenvy.ide</groupId>
        <artifactId>codenvy-ide-parent</artifactId>
        <version>3.0.0-M7-SNAPSHOT</version>
    </parent>
    <artifactId>codenvy-application-war</artifactId>
    <packaging>war</packaging>
    <name>Codenvy :: Packaging :: Application</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <generated.sources.directory>${project.build.directory}/generated-sources/gen</generated.sources.directory>
        <ide.module>com.codenvy.ide.IDE</ide.module>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-servlet</artifactId>
            <scope>runtime</scope>
            <version>${gwt.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <scope>provided</scope>
            <version>${gwt.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.gwt.inject</groupId>
            <artifactId>gin</artifactId>
            <version>${gin.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
            <version>${junit.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
            <version>${mockito.version}</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.gwt-test-utils</groupId>
            <artifactId>gwt-test-utils</artifactId>
            <scope>test</scope>
            <version>${gwt-test-utils.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ide-client</artifactId>
            <scope>provided</scope>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ide-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.platform-api</groupId>
            <artifactId>codenvy-api-vfs</artifactId>
            <scope>provided</scope>
            <version>${com.codenvy.platform-api.version}</version>
        </dependency>
        <!-- Extensions -->
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ext-java</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ext-web</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ext-git</artifactId>
            <version>${project.version}</version>
        </dependency>
         <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ext-github</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ext-extensions</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ext-tutorials</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>

        <plugins>
            <!-- Source Generator invocation -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.2.1</version>
                <executions>
                    <execution>
                        <id>extManager-client</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>com.codenvy.util.ExtensionManagerGenerator</mainClass>
                            <arguments>
                                <argument>--rootDir=${generated.sources.directory}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>IDEInjector-client</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>com.codenvy.util.IDEInjectorGenerator</mainClass>
                            <arguments>
                                <argument>--rootDir=${generated.sources.directory}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>DtoRegistry-client</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>com.codenvy.util.DtoFactoryVisitorRegistryGenerator</mainClass>
                            <arguments>
                                <argument>--rootDir=${generated.sources.directory}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- GWT Maven Plugin -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <version>${gwt.maven.plugin.version}</version>
                <executions>
                    <execution>
                        <configuration>
                            <extraJvmArgs>-Xss512m -Xmx2048m -XX:MaxPermSize=1024m</extraJvmArgs>
                            <modules>
                                <module>${ide.module}</module>
                                <module>com.codenvy.ide.ext.java.JavaParserWorker</module>
                            </modules>
                            <logLevel>INFO</logLevel>
                            <!--<style>PRETTY</style>-->
                            <!--<enableClosureCompiler>true</enableClosureCompiler>-->
                        </configuration>
                        <goals>
                            <goal>compile</goal>
                            <!--<goal>test</goal>-->
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <executions>
                    <execution>
                        <id>unwar-ide</id>
                        <phase>prepare-package</phase>
                        <configuration>
                            <tasks>
                                <move todir="${project.build.directory}/${project.artifactId}-${project.version}/_app/javaParserWorker">
                                   <fileset dir="${project.build.directory}/${project.artifactId}-${project.version}/javaParserWorker" />
                                </move>
                            </tasks>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <configuration>
                    <packagingExcludes>WEB-INF/lib/, WEB-INF/deploy/, WEB-INF/classes/, **/*junit_symbolMaps/**</packagingExcludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>1.8</version>
                <executions>
                    <execution>
                        <id>add-source</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${generated.sources.directory}</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- Used for GWT SuperDevMode. -->
        <profile>
            <id>dev</id>
            <properties>
                <ide.module>com.codenvy.ide.IDE_dev</ide.module>
            </properties>
        </profile>
    </profiles>

</project>
